--- a/TransactionKernelDSL.Framework.UnitTests/TransactionKernelDSL.Framework.UnitTests.csproj
+++ b/TransactionKernelDSL.Framework.UnitTests/TransactionKernelDSL.Framework.UnitTests.csproj
@@ -50,8 +50,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Facade\FacadeUnitTest.cs" />
+    <Compile Include="Facade\Mocks\MockFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TransactionKernelDSL.Framework\TransactionKernelDSL.Framework.csproj">
+      <Project>{8c6f8e91-5aa2-4bed-8213-10c37d5e85bd}</Project>
+      <Name>TransactionKernelDSL.Framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
