--- a/TransactionKernelDSL.Framework.UnitTests/TransactionKernelDSL.Framework.UnitTests.csproj
+++ b/TransactionKernelDSL.Framework.UnitTests/TransactionKernelDSL.Framework.UnitTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Facade\FacadeUnitTest.cs" />
     <Compile Include="Facade\Mocks\MockFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionKernelTools\UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TransactionKernelDSL.Framework\TransactionKernelDSL.Framework.csproj">
