--- a/TransactionKernelDSL.Language/Debugging/Debugging.csproj
+++ b/TransactionKernelDSL.Language/Debugging/Debugging.csproj
@@ -42,18 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CorrBancContext.cs" />
-    <Compile Include="CorrBancFacade.cs" />
-    <Compile Include="CustomCode\CorrBancContext_UserCustomizedCode.cs" />
-    <Compile Include="CustomCode\CorrBancFacade_UserCustomizedCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TL0\ListenerLayer\CustomCode\TL0_ListenerLayer_ConsultadeSaldo_Handler_UserCustomizedCode.cs" />
-    <Compile Include="TL0\ListenerLayer\CustomCode\TL0_ListenerLayer_ListenerEngine_EngineUserCustomizedCode.cs" />
-    <Compile Include="TL0\ListenerLayer\TL0_ListenerLayer_ConsultadeSaldo_Handler.cs" />
-    <Compile Include="TL0\ListenerLayer\TL0_ListenerLayer_ListenerEngine_Engine.cs" />
+    <Compile Include="UnitTest\CustomCode\TL0_ListenerLayer_asdasd_UnitTestInput.cs" />
+    <Compile Include="UnitTest\CustomCode\TL0_ListenerLayer_asdasd_UnitTestOutput.cs" />
+    <Compile Include="UnitTest\CustomCode\TL0_ListenerLayer_asdasd_UnitTest_UC.cs" />
+    <Compile Include="UnitTest\CustomCode\TL0_ListenerLayer_ListenerEngine_Parser_UnitTestInput.cs" />
     <Compile Include="UnitTest\CustomCode\TL0_ListenerLayer_ListenerEngine_UnitTestInput.cs" />
     <Compile Include="UnitTest\CustomCode\TL0_ListenerLayer_ListenerEngine_UnitTestOutput.cs" />
     <Compile Include="UnitTest\CustomCode\TL0_ListenerLayer_ListenerEngine_UnitTest_UC.cs" />
+    <Compile Include="UnitTest\TL0_ListenerLayer_asdasd_ProxyUnitTest.cs" />
+    <Compile Include="UnitTest\TL0_ListenerLayer_asdasd_UnitTest.cs" />
+    <Compile Include="UnitTest\TL0_ListenerLayer_ListenerEngine_Parser_UnitTest.cs" />
     <Compile Include="UnitTest\TL0_ListenerLayer_ListenerEngine_ProxyUnitTest.cs" />
     <Compile Include="UnitTest\TL0_ListenerLayer_ListenerEngine_UnitTest.cs" />
   </ItemGroup>
@@ -63,27 +62,23 @@
       <SubType>
       </SubType>
     </None>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-    <None Include="PPayDslReport.t4" />
-    <None Include="TrnxDsl1.TrnxDsl">
+    <None Include="PDSNet.TrnxDsl">
       <Generator>TransactionKernelDSLFrameworkLanguageFileCodeGenerator</Generator>
-      <LastGenOutput>TrnxDsl1.txt</LastGenOutput>
+      <LastGenOutput>PDSNet.txt</LastGenOutput>
     </None>
-    <None Include="TrnxDsl1.TrnxDsl.diagram">
-      <DependentUpon>TrnxDsl1.TrnxDsl</DependentUpon>
-    </None>
+    <Content Include="PPayDslReport.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>PPayDslReport1.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4df5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\CorrBancFacade_Script.sql" />
-    <Content Include="Scripts\TL0_ListenerLayer_ListenerEngine_Script.sql" />
-    <Content Include="TrnxDsl1.txt">
+    <Content Include="PDSNet.txt">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>TrnxDsl1.TrnxDsl</DependentUpon>
+      <DependentUpon>PDSNet.TrnxDsl</DependentUpon>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
