--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\TransactionKernelDSL.Framework.Parser.Beltran\packages.config" />
+  <repository path="..\TransactionKernelDSL.Framework.Parser.BPosBrowser\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Iso8583\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Iso8583B24\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Meflur\packages.config" />
