--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\TransactionKernelDSL.Framework.Parser.BPosBrowser\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Iso8583\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Iso8583B24\packages.config" />
+  <repository path="..\TransactionKernelDSL.Framework.Parser.Json\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Meflur\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework\packages.config" />
 </repositories>
