Modificaciones en el Framework

--- a/TransactionKernelDSL.Language/Debugging/App.config
+++ b/TransactionKernelDSL.Language/Debugging/App.config
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>	
     <configSections>
-	    
+	    <section name="PDSXML"   type="TransactionKernelDSL.Framework.V1.AbstractTransactionParserSection, TransactionKernelDSL.Framework, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" restartOnExternalChanges="true"/>
+	<section name="1"   type="TransactionKernelDSL.Framework.V1.AbstractTransactionParserSection, TransactionKernelDSL.Framework, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" restartOnExternalChanges="true"/>
+	
 	</configSections>
 	<appSettings>
         <add key="InstanceId" value="1" />
@@ -17,5 +19,85 @@
       <add address="*" maxconnection="100" />
     </connectionManagement>
     </system.net>
-          
+   <PDSXML>
+	</PDSXML>
+	<1>
+	<DefaultRequestFields>
+<field id="0" keyName="LENGTH" type="BCD" length="2" ></field>
+<field id="1" keyName="TPDU" type="BCD" length="5" ></field>
+<field id="2" keyName="MSGID" type="BCD" length="2"  IsTransactionIdentifier="true"></field>
+<field id="3" keyName="BITMAP" type="BIN" length="8" ></field>
+<field id="4" keyName="1" type="BIN" length="8"></field>
+<field id="5" keyName="2" type="LVAR" length="50" ></field>
+<field id="6" keyName="3" type="BCD" length="3"  IsTransactionIdentifier="true"></field>
+<field id="7" keyName="4" type="BCD" length="6" ></field>
+<field id="8" keyName="6" type="BCD" length="6" ></field>
+<field id="9" keyName="7" type="BCD" length="5" ></field>
+<field id="10" keyName="11" type="BCD" length="3" ></field>
+<field id="11" keyName="12" type="BCD" length="3" ></field>
+<field id="12" keyName="13" type="BCD" length="2" ></field>
+<field id="13" keyName="14" type="BCD" length="2" ></field>
+<field id="14" keyName="15" type="BCD" length="2" ></field>
+<field id="15" keyName="17" type="BCD" length="2" ></field>
+<field id="16" keyName="22" type="BCD" length="2" ></field>
+<field id="17" keyName="23" type="BCD" length="2" ></field>
+<field id="18" keyName="24" type="BCD" length="2" ></field>
+<field id="19" keyName="25" type="BCD" length="1" ></field>
+<field id="20" keyName="35" type="LVAR" length="40" ></field>
+<field id="21" keyName="37" type="ASCII" length="12" ></field>
+<field id="22" keyName="38" type="ASCII" length="6" ></field>
+<field id="23" keyName="39" type="ASCII" length="2" ></field>
+<field id="24" keyName="41" type="ASCII" length="8" ></field>
+<field id="25" keyName="42" type="ASCII" length="15" ></field>
+<field id="26" keyName="48" type="LLVAR" length="999" ></field>
+<field id="27" keyName="49" type="BCD" length="2" ></field>
+<field id="28" keyName="52" type="ASCII" length="8" ></field>
+<field id="29" keyName="54" type="LLVAR" length="999" ></field>
+<field id="30" keyName="55" type="LLVAR" length="999" ></field>
+<field id="31" keyName="58" type="LLVAR" length="999" ></field>
+<field id="32" keyName="60" type="LLVAR" length="999" ></field>
+<field id="33" keyName="61" type="LLVAR" length="999" ></field>
+<field id="34" keyName="62" type="LLVAR" length="999" ></field>
+<field id="35" keyName="63" type="LLVAR" length="999" ></field>
+</DefaultRequestFields>
+<DefaultResponseFields>
+<field id="0" keyName="LENGTH" type="BCD" length="2" ></field>
+<field id="1" keyName="TPDU" type="BCD" length="5" ></field>
+<field id="2" keyName="MSGID" type="BCD" length="2"  IsTransactionIdentifier="true"></field>
+<field id="3" keyName="BITMAP" type="BIN" length="8" ></field>
+<field id="4" keyName="1" type="BIN" length="8"></field>
+<field id="5" keyName="2" type="LVAR" length="50" ></field>
+<field id="6" keyName="3" type="BCD" length="3"  IsTransactionIdentifier="true"></field>
+<field id="7" keyName="4" type="BCD" length="6" ></field>
+<field id="8" keyName="6" type="BCD" length="6" ></field>
+<field id="9" keyName="7" type="BCD" length="5" ></field>
+<field id="10" keyName="11" type="BCD" length="3" ></field>
+<field id="11" keyName="12" type="BCD" length="3" ></field>
+<field id="12" keyName="13" type="BCD" length="2" ></field>
+<field id="13" keyName="14" type="BCD" length="2" ></field>
+<field id="14" keyName="15" type="BCD" length="2" ></field>
+<field id="15" keyName="17" type="BCD" length="2" ></field>
+<field id="16" keyName="22" type="BCD" length="2" ></field>
+<field id="17" keyName="23" type="BCD" length="2" ></field>
+<field id="18" keyName="24" type="BCD" length="2" ></field>
+<field id="19" keyName="25" type="BCD" length="1" ></field>
+<field id="20" keyName="35" type="LVAR" length="40" ></field>
+<field id="21" keyName="37" type="ASCII" length="12" ></field>
+<field id="22" keyName="38" type="ASCII" length="6" ></field>
+<field id="23" keyName="39" type="ASCII" length="2" ></field>
+<field id="24" keyName="41" type="ASCII" length="8" ></field>
+<field id="25" keyName="42" type="ASCII" length="15" ></field>
+<field id="26" keyName="48" type="LLVAR" length="999" ></field>
+<field id="27" keyName="49" type="BCD" length="2" ></field>
+<field id="28" keyName="52" type="ASCII" length="8" ></field>
+<field id="29" keyName="54" type="LLVAR" length="999" ></field>
+<field id="30" keyName="55" type="LLVAR" length="999" ></field>
+<field id="31" keyName="58" type="LLVAR" length="999" ></field>
+<field id="32" keyName="60" type="LLVAR" length="999" ></field>
+<field id="33" keyName="61" type="LLVAR" length="999" ></field>
+<field id="34" keyName="62" type="LLVAR" length="999" ></field>
+<field id="35" keyName="63" type="LLVAR" length="999" ></field>
+</DefaultResponseFields>
+</1>
+	       
 </configuration>
