--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,5 +6,6 @@
   <repository path="..\TransactionKernelDSL.Framework.Parser.Iso8583B24\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Json\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Meflur\packages.config" />
+  <repository path="..\TransactionKernelDSL.Framework.Parser.Xml\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework\packages.config" />
 </repositories>
