--- a/TransactionKernelDSL.Framework.Parser.Xml/TransactionKernelDSL.Framework.Parser.Xml.csproj
+++ b/TransactionKernelDSL.Framework.Parser.Xml/TransactionKernelDSL.Framework.Parser.Xml.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{92DB59D1-C2A1-47BD-88EB-B881875F4D7D}</ProjectGuid>
+    <ProjectGuid>{A47A2DC5-7F98-4D40-AE01-47E95C46B7C2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TransactionKernelDSL.Framework.Parser.Json</RootNamespace>
-    <AssemblyName>TransactionKernelDSL.Framework.Parser.Json</AssemblyName>
+    <RootNamespace>TransactionKernelDSL.Framework.Parser.Xml</RootNamespace>
+    <AssemblyName>TransactionKernelDSL.Framework.Parser.Xml</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -49,7 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net">
-      <HintPath>..\..\PDSNetV2\packages\log4net.2.0.5\lib\net40-full\log4net.dll</HintPath>
+      <HintPath>..\packages\log4net.2.0.5\lib\net40-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -63,10 +63,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JsonParser.cs" />
-    <Compile Include="JsonParserStream.cs" />
-    <Compile Include="JsonParserStructure.cs" />
+    <Compile Include="XmlDynamicHelper.cs" />
+    <Compile Include="XmlParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlRequestStructure.cs" />
+    <Compile Include="XmlStream.cs" />
+    <Compile Include="XmlResponseStructure.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TransactionKernelDSL.Framework\TransactionKernelDSL.Framework.csproj">
