--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,9 +3,11 @@
   <repository path="..\TransactionKernelDSL.Framework.Parser.Beltran\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.BPosBrowser\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Iso8583\packages.config" />
+  <repository path="..\TransactionKernelDSL.Framework.Parser.Iso8583_1993\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Iso8583B24\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Json\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Meflur\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework.Parser.Xml\packages.config" />
+  <repository path="..\TransactionKernelDSL.Framework.UnitTests\packages.config" />
   <repository path="..\TransactionKernelDSL.Framework\packages.config" />
 </repositories>
