Cambios Http Parser

--- a/TransactionKernelDSL.Framework.Parser.Http/TransactionKernelDSL.Framework.Parser.Http.csproj
+++ b/TransactionKernelDSL.Framework.Parser.Http/TransactionKernelDSL.Framework.Parser.Http.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\..\pds.framework\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,6 +45,7 @@
   <ItemGroup>
     <Compile Include="HttpParser.cs" />
     <Compile Include="HttpStream.cs" />
+    <Compile Include="HttpStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -48,6 +53,9 @@
       <Project>{8c6f8e91-5aa2-4bed-8213-10c37d5e85bd}</Project>
       <Name>TransactionKernelDSL.Framework</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
